opam-version: "2.0"
maintainer: "jjh_t@kaist.ac.kr"
authors: ["Jeong Jihoon"]
homepage: "https://github.com/jjh84/radamsa-ocaml"
bug-reports: "https://github.com/jjh84/radamsa-ocaml/issues"
dev-repo: "git+https://github.com/jjh84/radamsa-ocaml.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
]
synopsis: "OCaml bindings for radamsa"
description: ""

